Change banner to use frame and img

--- a/resources/authgear/templates/en/web/__header.html
+++ b/resources/authgear/templates/en/web/__header.html
@@ -1,3 +1,5 @@
 {{ define "__header.html" }}
-<div class="banner" style="background-image: url('{{ call $.StaticAssetURL "app-logo" }}')"></div>
+<div class="banner-frame">
+    <img class="banner" src="{{ call $.StaticAssetURL "app-logo" }}">
+</div>
 {{ end }}
